@@ -1,6 +1,16 @@
-* Fri Jun 01 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.4-0
+* Tue Jun 05 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.0-0
 - Update 'simp' audit profile settings for DISA STIG.
   - Expanded the list of successful syscall operations audited.
+  - Added an option to audit the execution of password commands
+    ('passwd', 'unix_chkpwd', 'gpasswd', 'chage', 'userhelper')
+  - Added an option to audit the execution of privilege-related
+    commands ('su', 'sudo', 'newgrp', 'chsh', 'sudoedit')
+  - Added an option to audit the execution of postfix-related commands
+    ('postdrop', 'postqueue')
+  - Added an option to audit the execution of the 'ssh-keysign' command
+  - Added an option to audit the execution of the 'crontab' command
+  - Added an option to audit the execution of the 'pam_timestamp_check'
+    command
 
 * Mon Mar 26 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.3-0
 - Work around RPM upgrade issue with nodeset link in compliance
